# lightbox

./: .project.vim  CMakeLists.txt  LICENSE  README.md  _config.yml  archive.html  atom.xml  configure  index.html  main.cpp
_includes/: head.html
_layouts/: default.html  post.html
_posts/: 2015-04-27-didier-badouel-ray-triangle-intersection.md  2015-05-15-lightbox.md  2015-05-27-didier-badouel-ray-triangle-intersection.md  2016-09-04-quaternions-explained.md
benchmarks/: ray_triangle_benchmark.cpp
cameras/: CMakeLists.txt
cameras/itf/: perspective_camera.h  pinhole_camera.h
cameras/src/: perspective_camera.cpp  pinhole_camera.cpp
common/: CMakeLists.txt
common/itf/: exception.cpp  exception.h
common/test/: exception_test.h
core/: CMakeLists.txt
core/itf/: bounding_box.h  camera.h  errors.h  film.h  integrator.h  mesh.h  obj_reader.h  ray.h  renderer.h  sampling.h  scene.h  triangle.h
core/src/: bounding_box.cpp  camera.cpp  film.cpp  mesh.cpp  obj_reader.cpp  obj_reader.h  ray.cpp  sampling.cpp  scene.cpp  triangle.cpp
core/test/: bounding_box_test.h  mesh_test.h  obj_reader_test.h  ray_test.h
doxygen/: lightbox.cfg
films/: CMakeLists.txt
films/itf/: memory_film.h
films/src/: memory_film.cpp
integrators/: CMakeLists.txt
integrators/itf/: raycast_integrator.h
integrators/src/: raycast_integrator.cpp
math/: CMakeLists.txt
math/itf/: constants.h  matrix4x4.h  quaternion.h  vector.h  vector_2d.h  vector_3d.h
math/src/: matrix4x4.cpp  vector.cpp  vector_2d.cpp  vector_3d.cpp
math/test/: matrix4x4_test.h  quaternion_test.h
mesh/: CMakeLists.txt
mesh/itf/: mesh.h  triangle.h
mesh/src/: mesh.cpp  triangle.cpp
mesh/test/: mesh_test.h
public/css/: poole.css
renderers/: CMakeLists.txt
renderers/itf/: cpu_triangle_renderer.h  static_noise_renderer.h
renderers/src/: cpu_triangle_renderer.cpp  static_noise_renderer.cpp
samplers/: CMakeLists.txt
samplers/itf/: simple_sampler.h
samplers/src/: simple_sampler.cpp
tests/: base_test.h  main.cpp
ui/: CMakeLists.txt
ui/itf/: window.h
ui/sdl/itf/: sdl_window.h
ui/sdl/src/: sdl_window.cpp
ui/src/: error.h  window.cpp
